--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6070ac">  <td>22/08/20 22:44:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_002.Verify_TestLogin_validCredential()[pri:0, instance:com.Test.TC_002@55b7a4e0]">Verify_TestLogin_validCredential</td> 
-  <td>main@1423561005</td>   <td></td> </tr>
-<tr bgcolor="c7b6bd">  <td>22/08/20 22:44:54</td>   <td>-3257</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.Test.TC_002@55b7a4e0]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1423561005</td>   <td></td> </tr>
-<tr bgcolor="c7b6bd">  <td>22/08/20 22:44:58</td>   <td>137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.Test.TC_002@55b7a4e0]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1423561005</td>   <td></td> </tr>
+<tr bgcolor="767fb7">  <td>22/09/08 13:33:56</td>   <td>0</td> <td title="&gt;&gt;BaseClass.BS()[pri:0, instance:com.Test.TC_001@38c6f217]">&gt;&gt;BS</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1092572064</td>   <td></td> </tr>
+<tr bgcolor="61d194">  <td>22/09/08 13:34:00</td>   <td>4127</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_001.Verify_TestLogin_validCredential()[pri:0, instance:com.Test.TC_001@38c6f217]">Verify_TestLogin_validCredential</td> 
+  <td>main@1092572064</td>   <td></td> </tr>
+<tr bgcolor="767fb7">  <td>22/09/08 13:33:56</td>   <td>634</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.Test.TC_001@38c6f217]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1092572064</td>   <td></td> </tr>
+<tr bgcolor="767fb7">  <td>22/09/08 13:34:00</td>   <td>4169</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.Test.TC_001@38c6f217]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1092572064</td>   <td></td> </tr>
 </table>
