--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="977b8d">  <td>22/08/21 16:04:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.Test.TC_002@5965d37]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@107915280</td>   <td></td> </tr>
-<tr bgcolor="e696b9">  <td>22/08/21 16:04:08</td>   <td>3515</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_002.Verify_TestLogin_validCredential()[pri:0, instance:com.Test.TC_002@5965d37]">Verify_TestLogin_validCredential</td> 
-  <td>main@107915280</td>   <td></td> </tr>
-<tr bgcolor="977b8d">  <td>22/08/21 16:04:04</td>   <td>-471</td> <td title="&gt;&gt;BaseClass.BS()[pri:0, instance:com.Test.TC_002@5965d37]">&gt;&gt;BS</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@107915280</td>   <td></td> </tr>
-<tr bgcolor="977b8d">  <td>22/08/21 16:04:10</td>   <td>4948</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.Test.TC_002@5965d37]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@107915280</td>   <td></td> </tr>
+<tr bgcolor="767fb7">  <td>22/09/15 09:35:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.Test.TC_001@38c6f217]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1092572064</td>   <td></td> </tr>
+<tr bgcolor="61d194">  <td>22/09/15 09:35:57</td>   <td>5207</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_001.Verify_TestLogin_validCredential()[pri:0, instance:com.Test.TC_001@38c6f217]">Verify_TestLogin_validCredential</td> 
+  <td>main@1092572064</td>   <td></td> </tr>
+<tr bgcolor="767fb7">  <td>22/09/15 09:35:51</td>   <td>-698</td> <td title="&gt;&gt;BaseClass.BS()[pri:0, instance:com.Test.TC_001@38c6f217]">&gt;&gt;BS</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1092572064</td>   <td></td> </tr>
+<tr bgcolor="767fb7">  <td>22/09/15 09:35:57</td>   <td>5254</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.Test.TC_001@38c6f217]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1092572064</td>   <td></td> </tr>
 </table>
